--- a/RentCar/App.config
+++ b/RentCar/App.config
@@ -4,7 +4,7 @@
     </configSections>
     <connectionStrings>
         <add name="RentCar.Properties.Settings.RentCarConnectionString"
-            connectionString="Data Source=DESKTOP-7UG5AJD\SQLEXPRESS02;Initial Catalog=RentCar;Integrated Security=True"
+            connectionString="Data Source=DESKTOP-0M12RT1\EQUIPO;Initial Catalog=RentCar;Integrated Security=True"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
